--- a/package.json
+++ b/package.json
@@ -25,9 +25,5 @@
   "bugs": {
     "url": "https://github.com/reloverse/wisp-client.js/issues"
   },
-  "homepage": "https://github.com/reloverse/wisp-client.js#readme",
-  "devDependencies": {
-    "webpack": "^5.103.0",
-    "webpack-cli": "^6.0.1"
-  }
+  "homepage": "https://github.com/reloverse/wisp-client.js#readme"
 }
